Fix wrap

--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -18,7 +18,8 @@ body
 .container 
 	height: 93vh
 .sidenav-content 
-	display: flex 
+	display: flex
+	flex-wrap: wrap
 	height: 100%
 	flex-direction: row
 	@media (min-width: 453px) and (max-width: 768px)
